--- a/index.qmd
+++ b/index.qmd
@@ -18,9 +18,9 @@ With this project we aim to:
 
 Guillermo Perez Algorta has been leading on a line of research on the topic of risk behavior management in daily life in people with a diagnosis of bipolar disorder.
 
-DD, Bipolar Edinburgh,
+David Dinham, lives with Bipolar, is researching mental health peer support as part of his PhD, and leads a bipolar membership organisation, Bipolar Edinburgh.
 
-ET, an expert leading on community-based health research projects through co-design methodologies.
+Professor Emmanuel Tsekleves leads Design for Global Health at Imagination Lancaster, Lancaster University. Driven by the UN’s Sustainable Development Goals, his research focuses on tackling community health challenges across the world. .
 
 ------------------------------------------------------------------------
 
