--- a/posts/my_first_post/index.qmd
+++ b/posts/my_first_post/index.qmd
@@ -14,7 +14,7 @@ To contribute to our understanding of the relationship between sexuality and bip
 
   
 
-The first one [(Krogh et al., 2023)](https://journalbipolardisorders.springeropen.com/articles/10.1186/s40345-023-00285-9) is focused on increasing our understanding of how sexual health and function in individuals with BD may be related to their disease and everyday life, including relationships. 
+The first one [(Krogh et al., 2023)](https://journalbipolardisorders.springeropen.com/articles/10.1186/s40345-023-00285-9) is focused on increasing our understanding of how sexual health and function in individuals with BD may be related to their condition and everyday life, including relationships. 
 The second one [(Yaghmaei et al., 2023)](https://onlinelibrary.wiley.com/doi/10.1111/bdi.13369) addresses the issue with a focus on the experience of families of people with bipolar disorder, the “unheard voices”. 
 
   
