--- a/index.qmd
+++ b/index.qmd
@@ -18,7 +18,7 @@ With this project we aim to:
 
 Guillermo Perez Algorta has been leading on a line of research on the topic of risk behavior management in daily life in people with a diagnosis of bipolar disorder.
 
-David Dinham, lives with Bipolar, is researching mental health peer support as part of his PhD, and leads a bipolar membership organisation, Bipolar Edinburgh.
+David Dinham, lives with Bipolar, is researching mental health peer support as part of his PhD and used to lead a bipolar membership organisation, Bipolar Edinburgh.
 
 Professor Emmanuel Tsekleves leads Design for Global Health at Imagination Lancaster, Lancaster University. Driven by the UN’s Sustainable Development Goals, his research focuses on tackling community health challenges across the world. .
 
