--- a/index.qmd
+++ b/index.qmd
@@ -16,7 +16,7 @@ With this project we aim to:
 
 ## Who we are?
 
-Guillermo Perez Algorta has been leading on a line of research on the topic of risk behavior management in daily life in people with a diagnosis of bipolar disorder.
+Guillermo Perez Algorta has been leading on this line of research on the topic of risk behavior management in daily life in people with a diagnosis of bipolar disorder.
 
 David Dinham, lives with Bipolar, is researching mental health peer support as part of his PhD and used to lead a bipolar membership organisation, Bipolar Edinburgh.
 
