--- a/posts/my_first_post/index.qmd
+++ b/posts/my_first_post/index.qmd
@@ -5,17 +5,17 @@ date: "2024-02-05"
 categories: [sexuality,general]
 ---
 
-In the (Bipolar Commission report)(https://www.bipolaruk.org/Handlers/Download.ashx?IDMF=d4fd68a7-ffae-42bb-acf4-f7be3d903f02), it was communicated that 64% of women reported having periods of hypersexuality, sometimes associated with experiences of “sexual assaults, unplanned children, vulnerability to sexually transmitted diseases, upsetting abortions, and relationships and marriage breakups as a result” (Bipolar UK, 2022, page 29). 
+In the [(Bipolar Commission report)](https://www.bipolaruk.org/Handlers/Download.ashx?IDMF=d4fd68a7-ffae-42bb-acf4-f7be3d903f02), it was communicated that 64% of women reported having periods of hypersexuality, sometimes associated with experiences of “sexual assaults, unplanned children, vulnerability to sexually transmitted diseases, upsetting abortions, and relationships and marriage breakups as a result” (Bipolar UK, 2022, page 29). 
 
-The authors called for the need for more research in this area, something that is well aligned with (our goals](https://lucianico.github.io/bipolarvirtual/). 
+The authors called for the need for more research in this area, something that is well aligned with [(our goals](https://lucianico.github.io/bipolarvirtual/). 
 
   
 To contribute to our understanding of the relationship between sexuality and bipolar disorder, we want to draw your attention to two recently published qualitative studies, one from Denmark and one from Iran. 
 
   
 
-The first one (Krogh et al., 2023)](https://journalbipolardisorders.springeropen.com/articles/10.1186/s40345-023-00285-9) is focused on increasing our understanding of how sexual health and function in individuals with BD may be related to their condition and everyday life, including relationships. 
-The second one (Yaghmaei et al., 2023)](https://onlinelibrary.wiley.com/doi/10.1111/bdi.13369) addresses the issue with a focus on the experience of families of people with bipolar disorder, the “unheard voices”. 
+The first one [(Krogh et al., 2023)](https://journalbipolardisorders.springeropen.com/articles/10.1186/s40345-023-00285-9) is focused on increasing our understanding of how sexual health and function in individuals with BD may be related to their condition and everyday life, including relationships. 
+The second one [(Yaghmaei et al., 2023)](https://onlinelibrary.wiley.com/doi/10.1111/bdi.13369) addresses the issue with a focus on the experience of families of people with bipolar disorder, the “unheard voices”. 
 
   
 Regardless of the study participants' cultural differences, both studies complement each other, opening a window to appreciate the nuances and complexities of the topic of sexuality in the context of bipolar disorders. 
