--- a/index.qmd
+++ b/index.qmd
@@ -6,6 +6,10 @@ image-shape: round
 image-width: 15em
 ---
 
+<meta http-equiv='cache-control' content='no-cache'> 
+<meta http-equiv='expires' content='0'> 
+<meta http-equiv='pragma' content='no-cache'>
+
 With this project we aim to:
 
 \- [Consolidate a research consortium]{.underline} to support and externally fund applications for *co-designing module interventions for capacity building to manage risk behaviors in daily life for people with a diagnosis of bipolar disorder*.
