--- a/index.qmd
+++ b/index.qmd
@@ -24,7 +24,8 @@ Guillermo Perez Algorta has been leading on this line of research on the topic o
 
 David Dinham, lives with Bipolar, is researching mental health peer support as part of his PhD and used to lead a bipolar membership organisation, Bipolar Edinburgh.
 
-Professor Emmanuel Tsekleves leads Design for Global Health at Imagination Lancaster, Lancaster University. Driven by the UN’s Sustainable Development Goals, his research focuses on tackling community health challenges across the world. .
+Professor Emmanuel Tsekleves leads Design for Global Health at Imagination Lancaster, Lancaster University. Driven by the UN’s Sustainable Development Goals, his research focuses on tackling community health challenges across the world.
+
 
 ------------------------------------------------------------------------
 
