--- a/index.qmd
+++ b/index.qmd
@@ -29,4 +29,4 @@ Professor Emmanuel Tsekleves leads Design for Global Health at Imagination Lanca
 
 ------------------------------------------------------------------------
 
-> This project has been supported by Lancaster University Research Catalyst Fund (2022/2023)
+> This project has been supported by Lancaster University Research Catalyst Fund (2022/2023).
