--- a/pagoda_webinar.qmd
+++ b/pagoda_webinar.qmd
@@ -23,3 +23,4 @@ For resources about creating slides in Quarto see: <https://quarto.org/docs/pres
 ## Slide 2
 
 Adding some content.
+Second test, now from right local folder.
