Minor slide update

--- a/pagoda_webinar.qmd
+++ b/pagoda_webinar.qmd
@@ -88,7 +88,7 @@ Finally, the kit must be integrated into daily life. This stage focuses on helpi
 
 # Role of Community Support Groups
 
-\- \[DD can add content here\]
+\- \[DD can add content here. eg. <http://nsuworks.nova.edu/tqr/vol22/iss1/12>, [Worrall (2018)](doi.org/10.1108/MHSI-12-2017-0055)\]
 
 \- Key role in implementing activities
 
