adding new title to closeread file

--- a/pagoda_closeread.qmd
+++ b/pagoda_closeread.qmd
@@ -1,5 +1,5 @@
 ---
-title: "Pagoda_closeread"
+title: "Personalised recovery and resilience kit for individuals with Bipolar Disorder: A metaphorical approach"
 format: closeread-html
 ---
 
