--- a/kit.qmd
+++ b/kit.qmd
@@ -11,6 +11,8 @@ Opening:
 
 People with Bipolar Disorder (BD) face significant risks of engaging in unpredictable, time-limited, yet devastating behaviours such as substance abuse, hypersexuality, relationship breakdown, and financial recklessness AND there are gaps in the disorder's treatment, SO we created a personalised recovery and resilience kit using the metaphor of a Japanese pagoda
 
+Testing the branch
+
 ------------------------------------------------------------------------
 
 Click [here](https://github.com/LuciaNico/bipolarvirtual/blob/main/RRP%20white%20paper.pdf) to access White Paper full version.
