edited kit document wording to utilize more person-centred language

--- a/kit.qmd
+++ b/kit.qmd
@@ -11,9 +11,9 @@ editor: visual
 
 Kit Intro Outline:
 
-People with Bipolar Disorder (BD) face significant risks of engaging in unpredictable, time-limited, yet devastating behaviours such as substance abuse, hypersexuality, relationship breakdown, and financial recklessness, but there are gaps in the disorder's treatment, which focuses primarily on one aspect: mood regulation.
+People with Bipolar Disorder (BD) face significant risks of engaging in unpredictable, time-limited, yet devastating behaviours such as substance abuse, hypersexuality, relationship breakdown, and financial recklessness, but there are gaps in the types of support provided to individuals with a diagnosis of BD, which focuses primarily on regulating mood.
 
-This has left the other faulty components of the disorder, including risk taking and decision making, largely unresolved. To address this issue, we created a personalised recovery and resilience kit using the metaphor of the Japanese pagoda architecture. The kit is informed by findings in past studies, co-design methodology, and community support groups.
+This has left other challenges experienced by them, including risk taking and decision making, largely unresolved. To address this issue, we created a personalised recovery and resilience kit using the metaphor of the Japanese pagoda architecture. The kit is informed by findings in past studies, co-design methodology, and community support groups.
 
 There are five central elements contributing to the kit, based on the structure of the pagoda: the Shinbashira (Core Self-Narratives), Interlocking Joints (Social Support Networks), Tiers (Coping Strategies), Roof (Protection and Boundaries), and the Foundation (Physical Well-being). This kit will go through each element and provide resources to contribute to the maintenance of each one.
 
